Add AutowiredBeanPostProcessor, sorting beanPostProcessors