@@ -1,6 +1,5 @@
 package com.bondarenko.ioc.context.impl;
 
-import com.bondarenko.ioc.annotation.Autowired;
 import com.bondarenko.ioc.context.GenericApplicationContext;
 import com.bondarenko.ioc.entity.Bean;
 import com.bondarenko.ioc.entity.BeanDefinition;
@@ -10,16 +9,18 @@ import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
 
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
+import java.lang.annotation.Annotation;
+import java.lang.reflect.Method;
+import java.util.*;
 
 @Setter
 @Getter
 @NoArgsConstructor
 public class AnnotationBasedApplicationContext extends GenericApplicationContext {
+
+    private static final String ANNOTATION_ORDER = "Order";
+    private static final String ORDER_VALUE = "value";
+    private Map<String, Bean> beanMap = new HashMap<>();
 
     public AnnotationBasedApplicationContext(String... paths) {
         this(new AnnotationBeanDefinitionReader(paths));
@@ -30,25 +31,39 @@ public class AnnotationBasedApplicationContext extends GenericApplicationContext
         initContext(beanDefinitions);
     }
 
-    public void injectRefDependencies(Map<String, BeanDefinition> beanDefinitions, Map<String, Bean> beans) {
-        Map<Class<?>, List<Object>> groupedBeanByClass = getGroupedBeanByClass(beans);
-
-        beans.values().forEach(bean -> {
-            Object beanObject = bean.getValue();
-            Arrays.stream(beanObject.getClass().getDeclaredFields())
-                    .filter(field -> field.isAnnotationPresent(Autowired.class))
-                    .forEach(field -> {
-                        Class<?> type = field.getType();
-                        groupedBeanByClass.getOrDefault(type, Collections.emptyList()).stream()
-                                .findFirst()
-                                .ifPresent(value -> super.findMethodToInjectRefDependencies(bean, field.getName(), value));
-                    });
-        });
+    @Override
+    protected void initContext(Map<String, BeanDefinition> beanDefinitions) {
+        createBeanPostProcessors(beanDefinitions);
+        processBeanDefinitions(beanDefinitions);
+        beanMap = createBeans(beanDefinitions);
+        injectValueDependencies(beanDefinitions, beanMap);
+        processBeansBeforeInitialization(beanMap);
+        initializeBeans(beanMap);
+        processBeansAfterInitialization(beanMap);
     }
 
-    private Map<Class<?>, List<Object>> getGroupedBeanByClass(Map<String, Bean> beans) {
-        return beans.values().stream()
-                .collect(Collectors.groupingBy(bean -> bean.getValue().getClass(),
-                        Collectors.mapping(Bean::getValue, Collectors.toList())));
+    @Override
+    public List<Bean> getBeanPostProcessors(Map<String, Bean> beanPostProcessorsMap) {
+        return beanPostProcessorsMap.values().stream()
+                .sorted(Comparator.comparingInt(this::getOrder))
+                .toList();
+    }
+
+    private int getOrder(Bean bean) {
+        List<Annotation> annotations = Arrays.asList(bean.getValue().getClass().getAnnotations());
+        return annotations.stream()
+                .filter(annotation -> annotation.annotationType().getSimpleName().equals(ANNOTATION_ORDER))
+                .mapToInt(this::getOrderValue)
+                .min().orElse(Integer.MAX_VALUE);
+    }
+
+    private int getOrderValue(Annotation annotation) {
+        try {
+            Method valueMethod = annotation.annotationType().getMethod(ORDER_VALUE);
+            return (int) valueMethod.invoke(annotation);
+        } catch (Exception e) {
+            e.printStackTrace();
+            return Integer.MAX_VALUE;
+        }
     }
 }
